--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+
+
+    <ul>
+        <li><a href="./recipes/butter-chicken.html">Butter Chicken</a></li>
+    </ul>
+
+    <img src="butterchicken2.jpg" height="533" width="800">
 </body>
 </html>
